syntax = "proto3";
package protobuffs;
option go_package = "./;protobuffs";

service CancelBooking {
    rpc CancelBooking (CancelRequest) returns (CancelResponse) {}
}

message CancelRequest {
    uint64 bookingId = 1;
}

message CancelResponse {
    bool success = 1;
    string errorMsg = 2;
}